gcc/testsuite/rust/rustc/ui/parser/issues/issue-103143_dg.rs
fn main() {
    x::<#[a]y::<z>>
// { dg-error ".E0425." "" { target *-*-* } .-1 }
// { dg-error ".E0425." "" { target *-*-* } .-2 }
}

